@@ -16,6 +16,7 @@
 
 	<properties>
 		<org.springframework.version>4.0.0.RELEASE</org.springframework.version>
+		<org.spring-security.version>3.2.0.RELEASE</org.spring-security.version>
 	</properties>
 
 	<dependencies>
@@ -53,6 +54,20 @@
 			<scope>compile</scope>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.0.1</version>
+			<scope>provided</scope>
+		</dependency>
+		<!-- Spring Security -->
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-web</artifactId>
+			<version>${org.spring-security.version}</version>
+			<optional>true</optional>
+		</dependency>
+		<!-- test -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
