@@ -10,6 +10,8 @@ Release 2.1.7
  * Create default error page content if no errorPage is configured.
  * @Configuration support for JavaConfig as an alternative to XML.
  * Spring >= 4.0.0 is required to use JavaConfig and @EnableHdivWebSecurity feature
+ * Ability to include an inner RequestDataValueProcessor to HdivRequestDataValueProcessor.
+ * Spring Security CSRF token integration. Both, HDIV and Spring Security tokens are created.
 
 Release 2.1.6
 ==================================
